--- a/app/src/main/res/layout/activity_escuela_insertar.xml
+++ b/app/src/main/res/layout/activity_escuela_insertar.xml
@@ -1,9 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".EscuelaInsertarActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="30dip"
+    android:stretchColumns="1" >
+    <TableRow>
+        <TextView android:text="@string/codEscuela"/>
+        <EditText
+            android:id="@+id/editcodEscuela"
+            android:inputType="text"
+            android:maxLength="7"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="@string/nombre" />
+        <EditText
+            android:id="@+id/editNombre"
+            android:inputType="text"
+            android:maxLength="30"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TableRow>
+        <TextView android:text="@string/opciones" />
+    </TableRow>
+
+    <TableRow>
+        <Button
+            android:onClick="insertarEscuela"
+            android:text="@string/insertar"
+            style="?android:attr/buttonBarButtonStyle" />
+
+        <Button
+            android:onClick="limpiarTexto"
+            android:text="@string/limpiar"
+            style="?android:attr/buttonBarButtonStyle" />
+    </TableRow>
+</TableLayout>
