--- a/app/src/main/res/layout/activity_escuela_actualizar.xml
+++ b/app/src/main/res/layout/activity_escuela_actualizar.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".EscuelaActualizarActivity">
+    android:paddingTop="10dip"
+    android:stretchColumns="1">
+    <TableRow>
+        <TextView android:text="@string/codEscuela"/>
+        <EditText
+            android:id="@+id/editCodEscuela"
+            android:inputType="text"
+            android:maxLength="7"
+            android:autofillHints=""
+            tools:ignore="LabelFor" />
+    </TableRow>
+    <TableRow>
+        <TextView android:text="@string/nombre" />
+        <EditText
+            android:id="@+id/editNombre"
+            android:inputType="text"
+            android:maxLength="30" />
+    </TableRow>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TableRow>
+        <Button
+            android:onClick="actualizarEscuela"
+            android:text="@string/actualizar" />
+    </TableRow>
+    <TableRow>
+        <Button
+            android:onClick="limpiarTexto"
+            android:text="@string/limpiar" />
+    </TableRow>
+</TableLayout>
