--- a/app/src/main/res/layout/activity_evaluacion_borrar.xml
+++ b/app/src/main/res/layout/activity_evaluacion_borrar.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".EvaluacionBorrarActivity">
 
+    <EditText
+        android:id="@+id/edtNumEva"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="Número de evaluacion"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnEliminar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:onClick="eliminarEvaluacion"
+        android:text="Eliminar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtNumEva" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
