--- a/app/src/main/res/layout/activity_evaluacion_insertar.xml
+++ b/app/src/main/res/layout/activity_evaluacion_insertar.xml
@@ -29,7 +29,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.149"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="92dp" />
+
+        app:layout_constraintTop_toBottomOf="@+id/edtNumEva" />
 
     <EditText
         android:id="@+id/edtAlumnosEvaluados"
