--- a/app/src/main/res/layout/activity_reservacion_actualizar.xml
+++ b/app/src/main/res/layout/activity_reservacion_actualizar.xml
@@ -7,16 +7,15 @@
     tools:context=".ReservacionActualizarActivity">
 
 
-
     <EditText
         android:id="@+id/edtFecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:maxLength="10"
-        android:hint="Fecha"
+        android:hint="@string/fecha"
         android:inputType="textPersonName"
+        android:maxLength="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:onClick="actualizarReservacion"
-        android:text="Actualizar"
+        android:text="@string/actualizar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Hora de inicio"
+        android:hint="@string/horaInicio"
         android:inputType="textPersonName"
         android:maxLength="5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,9 +53,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:maxLength="5"
-        android:hint="Hora de fin"
+        android:hint="@string/horaFin"
         android:inputType="textPersonName"
+        android:maxLength="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Número de reservación"
+        android:hint="@string/numReservacion"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -81,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Local"
+        android:hint="@string/local"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -94,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Docente"
+        android:hint="@string/docente"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
