--- a/app/src/main/res/layout/activity_ciclo_borrar.xml
+++ b/app/src/main/res/layout/activity_ciclo_borrar.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="ID de ciclo"
+        android:hint="@string/idCiclo"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:onClick="eliminarCiclo"
-        android:text="Eliminar"
+        android:text="@string/eliminar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
