--- a/app/src/main/res/layout/activity_materia_actualizar.xml
+++ b/app/src/main/res/layout/activity_materia_actualizar.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Código de materia"
+        android:hint="@string/codMateria"
         android:inputType="textPersonName"
         android:maxLength="6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Nombre"
+        android:hint="@string/nombre"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Código de escuela"
+        android:hint="@string/codSchool"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:onClick="actualizarMateria"
-        android:text="Actualizar"
+        android:text="@string/actualizar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
