--- a/app/src/main/res/layout/activity_materia_insertar.xml
+++ b/app/src/main/res/layout/activity_materia_insertar.xml
@@ -13,9 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:maxLength="6"
-        android:hint="Código de materia"
+        android:hint="@string/codMateria"
         android:inputType="textPersonName"
+        android:maxLength="6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Nombre"
+        android:hint="@string/nombre"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Código de escuela"
+        android:hint="@string/codSchool"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:onClick="insertarMateria"
-        android:text="Insertar"
+        android:text="@string/insertar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
